spacing issue

--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -171,7 +171,7 @@ header.masthead {
 
   header.masthead .intro-text {
     padding-top: 150px;
-        padding-bottom: 130px; }
+        padding-bottom: 150px !important; }
     header.masthead .intro-text .intro-lead-in {
       font-size: 22px;
       font-style: italic;
